Add animations to each section

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
             <div class="navbar-content">
                 <a href="./index.html">
                     <div class="logo">
-                        <img src="img/logo.svg" alt="Logo">
+                        <img class="animated animated-fast" src="img/logo.svg" alt="Logo">
                     </div>
                 </a>
                 <div class="nav-container">
                     <div class="nav-links">
                         <ul class="nav-menu">
-                            <li><a href="#about">ÜBER UNS</a></li>
-                            <li><a href="#gallery">GALERIE</a></li>
-                            <li><a href="#reviews">REZENSIONEN</a></li>
-                            <li><a href="#location">STANDORT</a></li>
+                            <li class="animated animated-fast"><a href="#about">ÜBER UNS</a></li>
+                            <li class="animated animated-fast"><a href="#gallery">GALERIE</a></li>
+                            <li class="animated animated-fast"><a href="#reviews">REZENSIONEN</a></li>
+                            <li class="animated animated-fast"><a href="#location">STANDORT</a></li>
                         </ul>
                     </div>
-                    <div class="order-now">
+                    <div class="order-now animated animated-fast">
                         <a href="https://www.lieferando.de/speisekarte/doner-zone" target="_blank"
                         rel="noopener noreferrer" class="order-now button">JETZT BESTELLEN</a>
                     </div>
@@ -63,11 +63,11 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="hero-container">
-                <h1>FRISCH, LECKER, EINZIGARTIG: DEIN DÖNER VON DER ZONE!</h1>
-                <p class="hero-text">Entdecke den unvergesslichen Geschmack unseres authentischen Döner
+                <h1 class="animated">FRISCH, LECKER, EINZIGARTIG: DEIN DÖNER VON DER ZONE!</h1>
+                <p class="hero-text animated">Entdecke den unvergesslichen Geschmack unseres authentischen Döner
                     Kebabs mit frischen Zutaten, feinsten Gewürzen und einer Prise
                     Leidenschaft. Komm vorbei und schmeck den Unterschied!</p>
-                <div class="hero-buttons">
+                <div class="hero-buttons animated">
                     <a href="https://www.lieferando.de/speisekarte/doner-zone" class="hero-button menu"
                     target="_blank" rel="noopener noreferrer">JETZT BESTELLEN</a>
                 </div>
@@ -78,15 +78,15 @@
         <section class="about section" id="about">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>ÜBER UNS</h2>
-                    <p>Unsere Philosophie ist einfach: Qualität über alles. Wir bereiten
+                    <h2 class="animated">ÜBER UNS</h2>
+                    <p class="animated">Unsere Philosophie ist einfach: Qualität über alles. Wir bereiten
                         unsere Speisen täglich frisch zu, verwenden regionale Zutaten und
                         legen besonderen Wert auf authentischen Geschmack. Bei uns trifft
                         Tradition auf Moderne – überzeug Dich selbst und genieße einen
                         Döner, der anders ist als der Rest.</p>
                 </div>
                 <div class="about-image">
-                    <img src="img/about.jpg" alt="About Us">
+                    <img class="animated" src="img/about.jpg" alt="About Us">
                 </div>
             </div>
         </section>
@@ -95,8 +95,8 @@
         <section class="gallery" id="gallery">
             <div class="gallery-container">
                 <div class="gallery-text">
-                    <h2>GALERIE</h2>
-                    <p>Bilder sagen mehr als tausend Worte – wirf einen Blick in unsere
+                    <h2 class="animated">GALERIE</h2>
+                    <p class="animated">Bilder sagen mehr als tausend Worte – wirf einen Blick in unsere
                     Galerie und lass Dich von unseren frischen, liebevoll zubereiteten
                     Speisen inspirieren. Hier wird der Genuss sichtbar!</p>
                 </div>
@@ -106,16 +106,16 @@
                 <span onclick="closeFullImg()">X</span>
             </div>
             <div class="img-gallery">
-                <img src="img/interior.jpg" onclick="openFullImg(this.src)" alt="">
-                <img src="img/doner.jpg" onclick="openFullImg(this.src)" alt="">
-                <img src="img/donertheke.jpg" onclick="openFullImg(this.src)" alt="">
-                <img src="img/doner3.jpg" onclick="openFullImg(this.src)" alt="">
-                <img src="img/donerzone-wall.jpg" onclick="openFullImg(this.src)" alt="">
-                <img src="img/doner2.jpg" onclick="openFullImg(this.src)" alt="">
-                <img src="img/interior.jpg" onclick="openFullImg(this.src)" alt="">
-                <img src="img/doner.jpg" onclick="openFullImg(this.src)" alt="">
-                <img src="img/donertheke.jpg" onclick="openFullImg(this.src)" alt="">
-                <img src="img/doner3.jpg" onclick="openFullImg(this.src)" alt="">
+                <img class="animated" src="img/interior.jpg" onclick="openFullImg(this.src)" alt="">
+                <img class="animated" src="img/doner.jpg" onclick="openFullImg(this.src)" alt="">
+                <img class="animated" src="img/donertheke.jpg" onclick="openFullImg(this.src)" alt="">
+                <img class="animated" src="img/doner3.jpg" onclick="openFullImg(this.src)" alt="">
+                <img class="animated" src="img/donerzone-wall.jpg" onclick="openFullImg(this.src)" alt="">
+                <img class="animated" src="img/doner2.jpg" onclick="openFullImg(this.src)" alt="">
+                <img class="animated" src="img/interior.jpg" onclick="openFullImg(this.src)" alt="">
+                <img class="animated" src="img/doner.jpg" onclick="openFullImg(this.src)" alt="">
+                <img class="animated" src="img/donertheke.jpg" onclick="openFullImg(this.src)" alt="">
+                <img class="animated" src="img/doner3.jpg" onclick="openFullImg(this.src)" alt="">
             </div>
         </section>
         
@@ -123,8 +123,8 @@
         <section class="reviews section" id="reviews">
             <div class="reviews-content">
                 <div class="reviews-text">
-                    <h2>REZENSIONEN</h2>
-                    <p>Unsere Gäste sind begeistert – überzeuge dich
+                    <h2 class="animated">REZENSIONEN</h2>
+                    <p class="animated">Unsere Gäste sind begeistert – überzeuge dich
                         selbst von unserem Geschmack und erfahre,
                         warum so viele immer wieder zu uns kommen.
                         Deine Meinung zählt!</p>
@@ -133,60 +133,60 @@
                     <div class="swiper-wrapper review-items">
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img src="img/person1.jpeg" alt="first person">
-                                <div class="info">
-                                    <p class="reviewer-name">Anton</p>
-                                    <p class="review-text">Super leckerer Döner mit frischen Zutaten und
+                                <img class="animated animated-fast" src="img/person1.jpeg" alt="first person">
+                                <div class="info animated animated-fast">
+                                    <p class="reviewer-name animated animated-fast">Anton</p>
+                                    <p class="review-text animated animated-fast">Super leckerer Döner mit frischen Zutaten und
                                         einer perfekt abgestimmten Soße: Gerne wieder!</p>
-                                    <span><i class="ri-double-quotes-r"></i></span>
+                                    <span class="animated animated-fast"><i class="ri-double-quotes-r ani"></i></span>
                                 </div>
                             </div>
                         </div>
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img src="img/person2.jpeg" alt="second person">
-                                <div class="info">
-                                    <p class="reviewer-name">Friedrich</p>
-                                    <p class="review-text">Große Portion, fairer Preis und das Fleisch
+                                <img class="animated animated-fast" src="img/person2.jpeg" alt="second person">
+                                <div class="info animated animated-fast">
+                                    <p class="reviewer-name animated animated-fast">Friedrich</p>
+                                    <p class="review-text animated animated-fast">Große Portion, fairer Preis und das Fleisch
                                         war genau auf den Punkt gegrillt: Ich komme gerne wieder!</p>
-                                    <span><i class="ri-double-quotes-r"></i></span>
+                                    <span class="animated animated-fast"><i class="ri-double-quotes-r"></i></span>
                                 </div>
                             </div>
                         </div>
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img src="img/person3.jpeg" alt="third person">
-                                <div class="info">
-                                    <p class="reviewer-name">Chantal</p>
-                                    <p class="review-text">Freundliches Personal, schneller Service und
+                                <img class="animated" src="img/person3.jpeg" alt="third person">
+                                <div class="info animated animated-fast">
+                                    <p class="reviewer-name animated animated-fast">Chantal</p>
+                                    <p class="review-text animated animated-fast">Freundliches Personal, schneller Service und
                                         ein Döner, der richtig satt macht: Top Erlebnis!</p>
-                                    <span><i class="ri-double-quotes-r"></i></span>
+                                    <span class="animated animated-fast"><i class="ri-double-quotes-r"></i></span>
                                 </div>
                             </div>
                         </div>
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img src="img/person4.jpeg" alt="fourth person">
-                                <div class="info">
-                                    <p class="reviewer-name">Anna</p>
-                                    <p class="review-text">Knuspriges Brot, saftiges Fleisch und eine würzige
+                                <img class="animated animated-fast" src="img/person4.jpeg" alt="fourth person">
+                                <div class="info animated animated-fast">
+                                    <p class="reviewer-name animated animated-fast">Anna</p>
+                                    <p class="review-text animated animated-fast">Knuspriges Brot, saftiges Fleisch und eine würzige
                                         Soße: Genau so muss ein Döner sein!</p>
-                                    <span><i class="ri-double-quotes-r"></i></span>
+                                    <span class="animated animated-fast"><i class="ri-double-quotes-r"></i></span>
                                 </div>
                             </div>
                         </div>
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img src="img/person5.jpeg" alt="fifth person">
-                                <div class="info">
-                                    <p class="reviewer-name">Jonas</p>
-                                    <p class="review-text">Angenehm überrascht: frische Zutaten, lecker gewürzt
+                                <img class="animated animated-fast" src="img/person5.jpeg" alt="fifth person">
+                                <div class="info animated animated-fast">
+                                    <p class="reviewer-name animated animated-fast">Jonas</p>
+                                    <p class="review-text animated animated-fast">Angenehm überrascht: frische Zutaten, lecker gewürzt
                                         und die Portion war mehr als ausreichend!</p>
-                                    <span><i class="ri-double-quotes-r"></i></span>
+                                    <span class="animated animated-fast"><i class="ri-double-quotes-r"></i></span>
                                 </div>
                             </div>
                         </div>
@@ -203,51 +203,51 @@
         <section class="location section" id="location">
             <div class="location-content">
                 <div class="location-text">
-                    <h2>STANDORT</h2>
-                    <P>Unsere zentrale Lage macht uns leicht erreichbar – ob zu Fuß,
+                    <h2 class="animated">STANDORT</h2>
+                    <P class="animated">Unsere zentrale Lage macht uns leicht erreichbar – ob zu Fuß,
                         mit dem Fahrrad oder den öffentlichen Verkehrsmitteln. Wir
                         freuen uns darauf, Dich willkommen zu heißen!</P>
                 </div>
                 <div class="location-details">
                     <div class="opening-hours-section">
                         <div class="opening-hours-header">
-                            <div class="clock-icon"><img src="img/clock-icon.svg"></div>
-                            <h3>Öffnungszeiten</h3>
+                            <div class="clock-icon animated"><img src="img/clock-icon.svg"></div>
+                            <h3 class="animated">Öffnungszeiten</h3>
                         </div>
                         <div class="opening-hours-content">
                             <table>
                                 <tr>
-                                    <td>Montag:</td>
-                                    <td>11:30 - 22:00 Uhr</td>
+                                    <td class="animated">Montag:</td>
+                                    <td class="animated">11:30 - 22:00 Uhr</td>
                                 </tr>
                                 <tr>
-                                    <td>Dienstag:</td>
-                                    <td>11:30 - 22:00 Uhr</td>
+                                    <td class="animated">Dienstag:</td>
+                                    <td class="animated">11:30 - 22:00 Uhr</td>
                                 </tr>
                                 <tr>
-                                    <td>Mittwoch:</td>
-                                    <td>11:30 - 22:00 Uhr</td>
+                                    <td class="animated">Mittwoch:</td>
+                                    <td class="animated">11:30 - 22:00 Uhr</td>
                                 </tr>
                                 <tr>
-                                    <td>Donnerstag:</td>
-                                    <td>11:30 - 22:00 Uhr</td>
+                                    <td class="animated">Donnerstag:</td>
+                                    <td class="animated">11:30 - 22:00 Uhr</td>
                                 </tr>
                                 <tr>
-                                    <td>Freitag:</td>
-                                    <td>11:30 - 22:30 Uhr</td>
+                                    <td class="animated">Freitag:</td>
+                                    <td class="animated">11:30 - 22:30 Uhr</td>
                                 </tr>
                                 <tr>
-                                    <td>Samstag:</td>
-                                    <td>11:30 - 22:30 Uhr</td>
+                                    <td class="animated">Samstag:</td>
+                                    <td class="animated">11:30 - 22:30 Uhr</td>
                                 </tr>
                                 <tr>
-                                    <td>Sonntag:</td>
-                                    <td>11:30 - 22:00 Uhr</td>
+                                    <td class="animated">Sonntag:</td>
+                                    <td class="animated">11:30 - 22:00 Uhr</td>
                                 </tr>
                             </table>
                         </div>
                     </div>
-                    <div class="contact-map">
+                    <div class="contact-map animated">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2499.638438171634!2d6.828446478320866!3d51.20731363257913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8cb946e59c6ed%3A0x98396fc1e3ecaa65!2sD%C3%B6ner%20Zone!5e0!3m2!1sde!2sde!4v1743321736992!5m2!1sde!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
@@ -256,15 +256,16 @@
 
         <!-- Footer -->
         <footer class="footer" id="footer">
-            <p class="footer-text">Copyright &copy; 2025 Döner Zone - Erstellt von 
-                <a href="https://de.linkedin.com/in/deyi-rao-15608b2b2" target="_blank">Deyi Rao</a>
+            <p class="footer-text animated">Copyright &copy; 2025 Döner Zone - Erstellt von 
+                <a class="animated" href="https://de.linkedin.com/in/deyi-rao-15608b2b2" target="_blank">Deyi Rao</a>
             </p>
         </footer>
     </div>
 
     <script src="js/fullImage.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/reviews.js"></script> <!-- Your custom script to initialize Swiper -->
+    <script src="js/reviews.js"></script>
+    <script src="js/animation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 
