Reduce image file sizes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="swiper-wrapper review-items">
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img class="animated animated-fast" src="img/person1.jpeg" alt="first person">
+                                <img class="animated animated-fast" src="img/person1.jpg" alt="first person">
                                 <div class="info animated animated-fast">
                                     <p class="reviewer-name animated animated-fast">Anton</p>
                                     <p class="review-text animated animated-fast">Super leckerer Döner mit frischen Zutaten und
@@ -145,7 +145,7 @@
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img class="animated animated-fast" src="img/person2.jpeg" alt="second person">
+                                <img class="animated animated-fast" src="img/person2.jpg" alt="second person">
                                 <div class="info animated animated-fast">
                                     <p class="reviewer-name animated animated-fast">Friedrich</p>
                                     <p class="review-text animated animated-fast">Große Portion, fairer Preis und das Fleisch
@@ -157,7 +157,7 @@
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img class="animated" src="img/person3.jpeg" alt="third person">
+                                <img class="animated" src="img/person3.jpg" alt="third person">
                                 <div class="info animated animated-fast">
                                     <p class="reviewer-name animated animated-fast">Chantal</p>
                                     <p class="review-text animated animated-fast">Freundliches Personal, schneller Service und
@@ -169,7 +169,7 @@
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img class="animated animated-fast" src="img/person4.jpeg" alt="fourth person">
+                                <img class="animated animated-fast" src="img/person4.jpg" alt="fourth person">
                                 <div class="info animated animated-fast">
                                     <p class="reviewer-name animated animated-fast">Anna</p>
                                     <p class="review-text animated animated-fast">Knuspriges Brot, saftiges Fleisch und eine würzige
@@ -181,7 +181,7 @@
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img class="animated animated-fast" src="img/person5.jpeg" alt="fifth person">
+                                <img class="animated animated-fast" src="img/person5.jpg" alt="fifth person">
                                 <div class="info animated animated-fast">
                                     <p class="reviewer-name animated animated-fast">Jonas</p>
                                     <p class="review-text animated animated-fast">Angenehm überrascht: frische Zutaten, lecker gewürzt
