--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="navbar-content">
                 <a href="./index.html">
                     <div class="logo">
-                        <img class="animated animated-fast" src="img/logo.svg" alt="Logo">
+                        <img class="animated animated-fast" src="img/donerzone-logo.svg" alt="Logo">
                     </div>
                 </a>
                 <div class="nav-container">
