Fix animation for reviews section

--- a/index.html
+++ b/index.html
@@ -129,64 +129,64 @@
                         warum so viele immer wieder zu uns kommen.
                         Deine Meinung zählt!</p>
                 </div>
-                <div class="swiper reviews-slider">
+                <div class="swiper reviews-slider animated">
                     <div class="swiper-wrapper review-items">
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img class="animated animated-fast" src="img/person1.jpg" alt="first person">
-                                <div class="info animated animated-fast">
-                                    <p class="reviewer-name animated animated-fast">Anton</p>
-                                    <p class="review-text animated animated-fast">Super leckerer Döner mit frischen Zutaten und
+                                <img src="img/person1.jpg" alt="first person">
+                                <div class="info">
+                                    <p class="reviewer-name">Anton</p>
+                                    <p class="review-text">Super leckerer Döner mit frischen Zutaten und
                                         einer perfekt abgestimmten Soße: Gerne wieder!</p>
-                                    <span class="animated animated-fast"><i class="ri-double-quotes-r ani"></i></span>
+                                    <span><i class="ri-double-quotes-r ani"></i></span>
                                 </div>
                             </div>
                         </div>
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img class="animated animated-fast" src="img/person2.jpg" alt="second person">
-                                <div class="info animated animated-fast">
-                                    <p class="reviewer-name animated animated-fast">Friedrich</p>
-                                    <p class="review-text animated animated-fast">Große Portion, fairer Preis und das Fleisch
+                                <img src="img/person2.jpg" alt="second person">
+                                <div class="info">
+                                    <p class="reviewer-name">Friedrich</p>
+                                    <p class="review-text">Große Portion, fairer Preis und das Fleisch
                                         war genau auf den Punkt gegrillt: Ich komme gerne wieder!</p>
-                                    <span class="animated animated-fast"><i class="ri-double-quotes-r"></i></span>
+                                    <span><i class="ri-double-quotes-r"></i></span>
                                 </div>
                             </div>
                         </div>
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img class="animated" src="img/person3.jpg" alt="third person">
-                                <div class="info animated animated-fast">
-                                    <p class="reviewer-name animated animated-fast">Chantal</p>
-                                    <p class="review-text animated animated-fast">Freundliches Personal, schneller Service und
+                                <img src="img/person3.jpg" alt="third person">
+                                <div class="info">
+                                    <p class="reviewer-name">Chantal</p>
+                                    <p class="review-text">Freundliches Personal, schneller Service und
                                         ein Döner, der richtig satt macht: Top Erlebnis!</p>
-                                    <span class="animated animated-fast"><i class="ri-double-quotes-r"></i></span>
+                                    <span><i class="ri-double-quotes-r"></i></span>
                                 </div>
                             </div>
                         </div>
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img class="animated animated-fast" src="img/person4.jpg" alt="fourth person">
-                                <div class="info animated animated-fast">
-                                    <p class="reviewer-name animated animated-fast">Anna</p>
-                                    <p class="review-text animated animated-fast">Knuspriges Brot, saftiges Fleisch und eine würzige
+                                <img src="img/person4.jpg" alt="fourth person">
+                                <div class="info">
+                                    <p class="reviewer-name">Anna</p>
+                                    <p class="review-text">Knuspriges Brot, saftiges Fleisch und eine würzige
                                         Soße: Genau so muss ein Döner sein!</p>
-                                    <span class="animated animated-fast"><i class="ri-double-quotes-r"></i></span>
+                                    <span><i class="ri-double-quotes-r"></i></span>
                                 </div>
                             </div>
                         </div>
 
                         <div class="swiper-slide">
                             <div class="reviews-item">
-                                <img class="animated animated-fast" src="img/person5.jpg" alt="fifth person">
-                                <div class="info animated animated-fast">
-                                    <p class="reviewer-name animated animated-fast">Jonas</p>
-                                    <p class="review-text animated animated-fast">Angenehm überrascht: frische Zutaten, lecker gewürzt
+                                <img src="img/person5.jpg" alt="fifth person">
+                                <div class="info">
+                                    <p class="reviewer-name">Jonas</p>
+                                    <p class="review-text">Angenehm überrascht: frische Zutaten, lecker gewürzt
                                         und die Portion war mehr als ausreichend!</p>
-                                    <span class="animated animated-fast"><i class="ri-double-quotes-r"></i></span>
+                                    <span><i class="ri-double-quotes-r"></i></span>
                                 </div>
                             </div>
                         </div>
